CHECK_INCLUDE_FILES(linux/memfd.h HAVE_LINUX_MEMFD_H)
CHECK_INCLUDE_FILES(sys/mman.h HAVE_SYS_MMAN_H)
CHECK_INCLUDE_FILES(sys/stat.h HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILES(fcntl.h HAVE_FCNTL_H)

CHECK_FUNCTION_EXISTS(syscall HAVE_SYSCALL)
CHECK_FUNCTION_EXISTS(fcntl HAVE_FCNTL)
CHECK_FUNCTION_EXISTS(mmap HAVE_MMAP)
CHECK_FUNCTION_EXISTS(munmap HAVE_MUNMAP)
CHECK_FUNCTION_EXISTS(ftruncate HAVE_FTRUNCATE)

CHECK_LIBRARY_EXISTS(rt shm_open "" HAVE_SHM_OPEN)
CHECK_LIBRARY_EXISTS(rt shm_unlink "" HAVE_SHM_UNLINK)

CHECK_TYPE_SIZE(size_t SIZE_T)
CHECK_TYPE_SIZE(long LONG)
CHECK_TYPE_SIZE("long int" LONG_INT)

add_library(ocmemfd ocmemfd.c)

IF(HAVE_LINUX_MEMFD_H AND NOT WITHOUT_MEMFD)

ELSEIF(HAVE_SHM_OPEN AND HAVE_SHM_UNLINK AND NOT WITHOUT_SHM)
  target_link_libraries(ocmemfd rt)
ELSE()

ENDIF()
