CHECK_INCLUDE_FILES(sys/stat.h HAVE_SYS_STAT_H)
CHECK_INCLUDE_FILES(sys/prctl.h HAVE_SYS_PRCTL_H)
CHECK_INCLUDE_FILES(mqueue.h HAVE_MQUEUE_H)

CHECK_LIBRARY_EXISTS(rt mq_open "" HAVE_MQ_OPEN)
CHECK_LIBRARY_EXISTS(rt mq_unlink "" HAVE_MQ_UNLINK)
CHECK_FUNCTION_EXISTS(prctl HAVE_PRCTL)
CHECK_FUNCTION_EXISTS(vdprintf HAVE_VDPRINTF)
CHECK_FUNCTION_EXISTS(getpid HAVE_GETPID)

SET(CMAKE_EXTRA_INCLUDE_FILES mqueue.h)
CHECK_TYPE_SIZE(mqd_t MQD_T)
CHECK_TYPE_SIZE(pid_t PID_T)
CHECK_TYPE_SIZE(size_t SIZE_T)
SET(CMAKE_EXTRA_INCLUDE_FILES)

add_library(ocsched ocsched.c)
target_link_libraries(ocsched rt ${Squash_LIBRARIES})
target_include_directories(ocsched PUBLIC ${Squash_INCLUDE_DIRS})
